--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -1,3 +1,4 @@
+source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
 # Ignore warnings from pods
@@ -17,6 +18,7 @@ target 'MoppApp' do
   pod 'Firebase/Analytics', '~> 8.7.0'
   pod 'SwiftyRSA', '~> 1.7.0'
   pod 'ZIPFoundation', '~> 0.9'
+  pod 'ILPDFKit', '~> 2.0.1'
 end
 
 target 'MoppAppTestEnv' do
