--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -30,6 +30,15 @@ target 'MoppAppTestEnv' do
   pod 'SwiftyRSA', :git => 'https://github.com/TakeScoop/SwiftyRSA', :tag => '1.8.0'
 end
 
+target 'MoppAppTests' do
+  inherit! :search_paths
+  project 'MoppApp.xcodeproj'
+  pod 'FirebaseCrashlytics', '~> 10.8.0'
+  pod 'SwiftyRSA', :git => 'https://github.com/TakeScoop/SwiftyRSA', :tag => '1.8.0'
+  pod 'ZIPFoundation', '~> 0.9.16'
+  pod 'ILPDFKit', '~> 2.0.1'
+end
+
 target 'MoppLib' do
   platform :ios, '13.0'
   project '../MoppLib/MoppLib.xcodeproj'
