--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -18,6 +18,7 @@ target 'MoppApp' do
   pod 'SwiftyRSA', '~> 1.7.0'
   pod 'ZIPFoundation', '~> 0.9.13'
   pod 'ILPDFKit', '~> 2.0.1'
+  pod 'ASN1Decoder', '~> 1.8.0'
 end
 
 target 'MoppAppTestEnv' do
