--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -16,7 +16,7 @@ target 'MoppApp' do
   project 'MoppApp.xcodeproj'
   pod 'Firebase/Core', '~> 10.8.0'
   pod 'FirebaseCrashlytics', '~> 10.8.0'
-  pod 'SwiftyRSA', '~> 1.7.0'
+  pod 'SwiftyRSA', :git => 'https://github.com/TakeScoop/SwiftyRSA', :tag => '1.8.0'
   pod 'ZIPFoundation', '~> 0.9.16'
   pod 'ASN1Decoder', '~> 1.8.0'
 end
@@ -27,7 +27,7 @@ target 'MoppAppTestEnv' do
 
   pod 'Firebase/Core', '~> 10.8.0'
   pod 'FirebaseCrashlytics', '~> 10.8.0'
-  pod 'SwiftyRSA', '~> 1.7.0'
+  pod 'SwiftyRSA', :git => 'https://github.com/TakeScoop/SwiftyRSA', :tag => '1.8.0'
 end
 
 target 'MoppLib' do
