--- a/MoppApp/Podfile
+++ b/MoppApp/Podfile
@@ -24,19 +24,21 @@ end
 target 'MoppAppTestEnv' do
   platform :ios, '13.0'
   project 'MoppApp.xcodeproj'
-
   pod 'Firebase/Core', '~> 10.8.0'
   pod 'FirebaseCrashlytics', '~> 10.8.0'
   pod 'SwiftyRSA', :git => 'https://github.com/TakeScoop/SwiftyRSA', :tag => '1.8.0'
+  pod 'ZIPFoundation', '~> 0.9.16'
+  pod 'ASN1Decoder', '~> 1.8.0'
 end
 
 target 'MoppAppTests' do
   inherit! :search_paths
   project 'MoppApp.xcodeproj'
+  pod 'Firebase/Core', '~> 10.8.0'
   pod 'FirebaseCrashlytics', '~> 10.8.0'
   pod 'SwiftyRSA', :git => 'https://github.com/TakeScoop/SwiftyRSA', :tag => '1.8.0'
   pod 'ZIPFoundation', '~> 0.9.16'
-  pod 'ILPDFKit', '~> 2.0.1'
+  pod 'ASN1Decoder', '~> 1.8.0'
 end
 
 target 'MoppLib' do
