--- a/MoppLib/MoppLib/libdigidocpp/libdigidocpp.iphonesimulator/lib/digidocpp.framework/digidocpp.conf
+++ b/MoppLib/MoppLib/libdigidocpp/libdigidocpp.iphonesimulator/lib/digidocpp.framework/digidocpp.conf
@@ -21,7 +21,7 @@
     <!--<param name="proxy.pass" lock="false"></param>-->
 
     <!--Time-stamping service settings-->
-    <!--<param name="ts.url" lock="false">http://dd-at.ria.ee/tsa</param>-->
+    <!--<param name="ts.url" lock="false">https://eid-dd.ria.ee/ts</param>-->
 
     <!--TSL settings-->
     <!--<param name="tsl.autoupdate" lock="false">true</param>-->
