--- a/MoppApp/shareExtension/shareExtension.entitlements
+++ b/MoppApp/shareExtension/shareExtension.entitlements
@@ -3,6 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.application-groups</key>
-	<array/>
+	<array>
+		<string>group.ee.ria.digidoc.ios</string>
+	</array>
 </dict>
 </plist>
