Add EstEID 2018 v2 support
Signed-off-by: Raul Metsma <raul@metsma.ee>

--- a/MoppApp/MoppApp/Info.plist
+++ b/MoppApp/MoppApp/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 	<string>RIA DigiDoc</string>
 	<key>CFBundleDocumentTypes</key>
@@ -269,10 +269,6 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleDarkContent</string>
 	<key>UISupportedExternalAccessoryProtocols</key>
@@ -1024,7 +1020,7 @@
 	</array>
 	<key>com.apple.developer.nfc.readersession.iso7816.select-identifiers</key>
 	<array>
-		<string>A000000077010800070000FE000001</string>
+		<string>A000000077010800070000FE00000100</string>
 	</array>
 </dict>
 </plist>
